fix: update button styles and border radius for improved consistency across project templates

--- a/src/templates/profile/company_profile.html
+++ b/src/templates/profile/company_profile.html
@@ -53,7 +53,7 @@
 
                 {% if is_owner %}
                 <button id="editProfileButton"
-                    class="bg-primary_medium text-white px-6 py-2 rounded-xl mt-6 hover:bg-primary_dark transition-transform duration-300 hover:scale-105">
+                    class="bg-primary_medium text-white px-6 py-2 rounded-lg mt-6 hover:bg-primary_dark transition-transform duration-300 hover:scale-105">
                     {% translate 'Editar Perfil' %}
                 </button>
                 {% endif %}
