--- a/src/templates/projects/data_project.html
+++ b/src/templates/projects/data_project.html
@@ -7,7 +7,7 @@
     <h1 class="text-primary_black text-2xl font-bold mt-4">Informes del Proyecto</h1>
 
     <!-- Progreso General de los Hitos -->
-    <div class="bg-primary_lightest p-6 rounded-xl shadow-md mt-6">
+    <div class="bg-primary_lightest p-6 rounded-lg shadow-md mt-6">
         <h2 class="text-xl font-bold text-primary_black">Progreso de Hitos</h2>
         <div class="bg-white p-4 rounded-lg shadow-md">
             <p class="mb-4"><strong>Progreso Actual de Hitos:</strong></p>
@@ -40,7 +40,7 @@
     </div>
 
     <!-- Progreso General de las Tareas -->
-    <div class="bg-primary_lightest p-6 rounded-xl shadow-md mt-6">
+    <div class="bg-primary_lightest p-6 rounded-lg shadow-md mt-6">
         <h2 class="text-xl font-bold text-primary_black">Progreso de Tareas</h2>
         <div class="bg-white p-4 rounded-lg shadow-md">
             <p class="mb-4"><strong>Progreso Actual de Tareas:</strong></p>
@@ -73,7 +73,7 @@
     </div>
 
     <!-- Sección de Hitos y Tareas Agrupadas -->
-    <div class="bg-primary_lightest p-6 rounded-xl shadow-md mt-6">
+    <div class="bg-primary_lightest p-6 rounded-lg shadow-md mt-6">
         <h2 class="text-xl font-bold text-primary_black">Hitos y Tareas</h2>
 
         {% if milestones %}
