--- a/src/templates/projects/planning_section/project_milestones.html
+++ b/src/templates/projects/planning_section/project_milestones.html
@@ -14,7 +14,7 @@
     </div>
 
     {% if milestones.count == 0 %}
-    <div class="text-center p-4 bg-primary_lightest rounded-xl shadow-sm">
+    <div class="text-center p-4 bg-primary_lightest rounded-lg shadow-sm">
         <p class="text-primary_black">{% translate "No hay hitos registrados" %}</p>
     </div>
     {% endif %}
