--- a/src/templates/dashboard/company_dashboard.html
+++ b/src/templates/dashboard/company_dashboard.html
@@ -12,8 +12,8 @@
     </div>
 
     <!-- CONTENT -->
-    <div class="bg-bg_gray rounded-xl min-h-[150px] overflow-x-auto">
-        <div class="flex gap-4 p-4 rounded-xl">
+    <div class="bg-bg_gray rounded-lg min-h-[150px] overflow-x-auto">
+        <div class="flex gap-4 p-4 rounded-lg">
             {% for freelancer in recent_freelancers %}
             
             <div class="">
@@ -41,8 +41,8 @@
             <div class="flex justify-between items-center mb-2">
                 <p class="text-lg font-bold text-primary_black"> {% translate "Mis Proyectos" %} </p>
             </div>
-            <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
-                <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
+            <div class="bg-bg_gray rounded-lg flex-1 overflow-y-auto">
+                <div class="flex flex-col gap-4 p-4 rounded-lg h-full">
                     {% for project in company_projects %}
                         <div>
                             {% include 'projects/project_card.html' with list="true" %}
@@ -59,8 +59,8 @@
             <div class="flex justify-between items-center mb-2">
                 <p class="text-lg font-bold text-primary_black"> {% translate "Postulaciones" %} </p>
             </div>
-            <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto ">
-                <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
+            <div class="bg-bg_gray rounded-lg flex-1 overflow-y-auto ">
+                <div class="flex flex-col gap-4 p-4 rounded-lg h-full">
                     {% for application in pending_applications %}
                         <div>
                             {% include 'projects/project_application_li.html' with DashboardView="true" %}
@@ -80,8 +80,8 @@
     <div class="flex justify-between items-center mb-2">
         <p class="text-lg font-bold text-primary_black"> {% translate "Análisis de éxito" %} </p>
     </div>
-    <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
-        <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
+    <div class="bg-bg_gray rounded-lg flex-1 overflow-y-auto">
+        <div class="flex flex-col gap-4 p-4 rounded-lg h-full">
 
         </div>
     </div>
@@ -94,7 +94,7 @@
         <p class="text-lg font-bold text-primary_black"> {% translate "Estado Financiero" %} </p>
     </div>
 
-    <div class="bg-bg_gray rounded-xl h-96 gap-4 p-4 flex flex-col">
+    <div class="bg-bg_gray rounded-lg h-96 gap-4 p-4 flex flex-col">
 
         <!-- SECTION 3.1 - BALANCE -->
         <div class="bg-bg_white rounded-lg flex-1 p-3">
