--- a/src/templates/dashboard/freelancer_dashboard.html
+++ b/src/templates/dashboard/freelancer_dashboard.html
@@ -14,8 +14,8 @@
     </div>
 
     <!-- COINTENT -->
-    <div class="bg-bg_gray rounded-xl min-h-[290px] overflow-x-auto">
-        <div class="flex gap-4 p-4 rounded-xl">
+    <div class="bg-bg_gray rounded-lg min-h-[290px] overflow-x-auto">
+        <div class="flex gap-4 p-4 rounded-lg">
             {% for project in available_projects %}
             
             <div class="min-w-[300px]">
@@ -40,8 +40,8 @@
         <div class="flex justify-between items-center mb-2">
             <p class="text-lg font-bold text-primary_black"> {% translate "Tareas Pendientes" %} </p>
         </div>
-        <div class="bg-bg_gray rounded-xl md:flex-1 overflow-y-auto">
-            <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
+        <div class="bg-bg_gray rounded-lg md:flex-1 overflow-y-auto">
+            <div class="flex flex-col gap-4 p-4 rounded-lg h-full">
                 {% for task in freelancer_pending_tasks %}
                     <div>
                         {% include 'projects/task_card.html' with list=True %}
@@ -61,8 +61,8 @@
             <div class="flex justify-between items-center mb-2">
                 <p class="text-lg font-bold text-primary_black"> {% translate "Mis Proyectos" %} </p>
             </div>
-            <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
-                <div class="flex flex-col gap-4 p-4 rounded-xl h-full">
+            <div class="bg-bg_gray rounded-lg flex-1 overflow-y-auto">
+                <div class="flex flex-col gap-4 p-4 rounded-lg h-full">
                     {% for project in freelancer_projects %}
                         <div>
                             {% include 'projects/project_card.html' with list="true" %}
@@ -79,7 +79,7 @@
             <div class="flex justify-between items-center mb-2">
                 <p class="text-lg font-bold text-primary_black"> {% translate "Mi Progreso" %} </p>
             </div>
-            <div class="bg-bg_gray rounded-xl flex-1 overflow-y-auto">
+            <div class="bg-bg_gray rounded-lg flex-1 overflow-y-auto">
                 <div class="flex items-center justify-center gap-8 m-auto h-full w-full p-4">
                     <!-- Canvas -->
                     <div class="relative">
@@ -117,7 +117,7 @@
         <p class="text-lg font-bold text-primary_black"> {% translate "Estado Financiero" %} </p>
     </div>
 
-    <div class="bg-bg_gray rounded-xl h-96 gap-4 p-4 flex flex-col">
+    <div class="bg-bg_gray rounded-lg h-96 gap-4 p-4 flex flex-col">
 
         <!-- SECTION 3.1 - BALANCE -->
         <div class="bg-bg_white rounded-lg flex-1 p-3">
