--- a/src/templates/navigation/top_bar_controls.html
+++ b/src/templates/navigation/top_bar_controls.html
@@ -2,10 +2,10 @@
 <div class="flex w-full gap-7 items-center h-12 justify-between">
     <!-- Barra de búsqueda -->
     <form action="/project/list/" method="GET" class="relative w-full focus:shadow-sm">
-        <div class="flex justify-between w-full bg-white rounded-xl border-primary_lightest border px-2 hover:shadow-sm">
+        <div class="flex justify-between w-full bg-white rounded-lg border-primary_lightest border px-2 hover:shadow-sm">
             <!-- Input de búsqueda -->
             <input type="search" name="search" id="default-search"
-                class="w-full px-2 py-2 text-sm text-primary_black border-none rounded-xl focus:outline-none focus:ring-0 focus:border-transparent"
+                class="w-full px-2 py-2 text-sm text-primary_black border-none rounded-lg focus:outline-none focus:ring-0 focus:border-transparent"
                 placeholder="{% translate "Buscar proyectos"%}" />
 
             <!-- Botón de búsqueda -->
@@ -19,7 +19,7 @@
             <!-- Botón de filtro con opciones desplegables -->
             <div class="relative">
                 <button type="button" id="filter-button"
-                    class="flex items-center px-3 py-2 bg-white rounded-xl border-primary_lightest hover:bg-gray-100 hover:shadow-sm">
+                    class="flex items-center px-3 py-2 bg-white rounded-lg border-primary_lightest hover:bg-gray-100 hover:shadow-sm">
                     {% include "icon/filter.html" with h="24" classname="" %}
                 </button>
 
