--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -60,7 +60,7 @@
                 
                 {% if is_owner %}
                 <a href="{% url 'customize_profile' %}">
-                    <button class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
+                    <button class="bg-primary_medium text-white px-4 py-2 rounded-lg mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                         {% translate "Editar Perfil" %}
                     </button>
                 </a>
@@ -88,7 +88,7 @@
             <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Experiencia Laboral" %}</h2>
             {% if is_owner %}
             <a href="{% url 'add_experience' %}"
-                class="bg-primary_medium text-white px-1 py-1 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
+                class="bg-primary_medium text-white px-1 py-1 rounded-lg hover:bg-primary_dark transition-transform duration-300 hover:scale-110"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
             </a>
             {% endif %}
         </div>
@@ -123,7 +123,7 @@
             <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Portafolio" %}</h2>
             
             {% if is_owner %}
-            <button onclick="toggleDropdown()" class="bg-primary_medium text-white px-1 py-1 rounded-xl shadow hover:bg-primary_dark transition-transform duration-300 hover:scale-105 flex items-center space-x-2">
+            <button onclick="toggleDropdown()" class="bg-primary_medium text-white px-1 py-1 rounded-lg shadow hover:bg-primary_dark transition-transform duration-300 hover:scale-105 flex items-center space-x-2">
                 <svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
             </button>
             {% endif %}
@@ -189,7 +189,7 @@
             <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Curriculum Vitae" %}</h2>
             {% if is_owner %}
             <a href="{% url 'upload_curriculum' %}"
-                class="bg-primary_medium text-white px-1 py-1 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
+                class="bg-primary_medium text-white px-1 py-1 rounded-lg hover:bg-primary_dark transition-transform duration-300 hover:scale-110"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="2"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-plus"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 5l0 14" /><path d="M5 12l14 0" /></svg>
             </a>
             {% endif %}
         </div>
