--- a/src/templates/projects/management_section/project_milestones.html
+++ b/src/templates/projects/management_section/project_milestones.html
@@ -17,12 +17,12 @@
     <div class="text-center p-4 bg-primary_lightest rounded-lg shadow-sm">
         <p class="text-primary_black">{% translate "No hay hitos registrados" %}</p>
     </div>
-    {% endif %}
 
-    <div class=" p-4 rounded-lg shadow-sm grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 bg-primary_lightest">
+    {% else %}
+    <div class="p-6 rounded-lg shadow-sm grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 bg-primary_lightest">
         <!-- Loop through Milestones -->
         {% for milestone in milestones %}
-        <div class="bg-bg_white p-4 rounded-lg text-center space-y-4 transition-transform transform hover:scale-105 hover:shadow-lg duration-300">
+        <div class="bg-bg_white p-4 rounded-lg text-center space-y-4 hover:shadow-md">
             <div class="w-full {{ milestone.deadline_color }} p-1"></div>
 
             <h3 class="text-lg font-semibold text-primary_black">{{ milestone.name }}</h3>
@@ -38,6 +38,7 @@
             </div>
         </div>
         {% endfor %}
-        
     </div>
+    {% endif %}
+
 </div>
