--- a/src/templates/projects/project_navigation_tabs.html
+++ b/src/templates/projects/project_navigation_tabs.html
@@ -4,22 +4,22 @@
 <div class="flex flex-wrap items-center justify-center gap-5 bg-primary_lightest rounded-lg px-4 py-2 text-white">
 
    <a href="/project/{{ project.id }}/management" class="text-md font-semibold bg-primary_light rounded-lg px-6 md:px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 min-w-[120px] 
-       {% if section == 'milestone' %} !bg-primary_dark text-white{% endif %}">
+       {% if section == 'management' %} !bg-primary_dark text-white{% endif %}">
       {% translate "Avance del proyecto" %}
    </a>
 
    <a href="/project/{{ project.id }}/planning" class="text-md font-semibold bg-primary_light rounded-lg px-6 md:px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 min-w-[120px] 
-       {% if section == 'task' %} !bg-primary_dark text-white{% endif %}">
+       {% if section == 'planning' %} !bg-primary_dark text-white{% endif %}">
       {% translate "Planeación" %}
    </a>
 
    <a href="/project/{{ project.id }}/progress" class="text-md font-semibold bg-primary_light rounded-lg px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 min-w-[120px] 
-       {% if section == 'deliverable' %} !bg-primary_dark text-white{% endif %}">
+       {% if section == 'progress' %} !bg-primary_dark text-white{% endif %}">
       {% translate "Progreso" %}
    </a>
 
    <a href="/project/{{ project.id }}/team" class="text-md font-semibold bg-primary_light rounded-lg px-6 md:px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 min-w-[150px] whitespace-nowrap 
-       {% if section == 'time_line' %} !bg-primary_dark text-white{% endif %}">
+       {% if section == 'team' %} !bg-primary_dark text-white{% endif %}">
       {% translate "Equipo y Comunicación" %}
    </a>
 </div>
