--- a/src/templates/projects/management_section/project_tasks.html
+++ b/src/templates/projects/management_section/project_tasks.html
@@ -21,7 +21,7 @@
   </div>
 
   {% if tasks.count == 0 %}
-  <div class="text-center p-4 bg-primary_lightest rounded-lg shadow-sm">
+  <div class="text-center p-4 bg-primary_lightest/25/25 rounded-lg shadow-sm">
     <p class="text-primary_black">{% translate "No hay tareas registradas" %}</p>
   </div>
   {% else %}
@@ -47,7 +47,7 @@
       </form>
   </div>
 
-  <div class="bg-primary_lightest p-6 rounded-lg shadow-sm">
+  <div class="bg-primary_lightest/25 p-6 rounded-lg shadow-sm">
   
 
     <!-- Sección de Tareas -->
