--- a/src/templates/projects/default_project_view.html
+++ b/src/templates/projects/default_project_view.html
@@ -11,7 +11,7 @@
     <!-- Panel de Control -->
     <h1 class="text-primary_black text-2xl font-bold mt-4">{% translate "Panel de control" %}</h1>
 
-    <div class="bg-primary_lightest p-6 rounded-lg shadow-sm mt-6">
+    <div class="bg-primary_lightest/25 p-6 rounded-lg shadow-sm mt-6">
         <div class="flex flex-col md:flex-row pt-10">
             <!-- Left Section with Image and Basic Info -->
             <div class="flex-shrink-0 w-full md:w-1/3">
