--- a/src/templates/projects/project_navigation_tabs.html
+++ b/src/templates/projects/project_navigation_tabs.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <!-- Navigation Tabs -->
-<div class="flex flex-wrap items-center justify-center gap-5 bg-primary_lightest rounded-lg px-4 py-2 text-white">
+<div class="flex flex-wrap items-center justify-center gap-5 bg-primary_lightest/25 rounded-lg px-4 py-2 text-white">
 
    <a href="/project/{{ project.id }}/management" class="text-md font-semibold bg-primary_light rounded-lg px-6 md:px-8 py-2 hover:bg-primary_dark transition-transform duration-300 hover:scale-105 min-w-[120px] 
        {% if section == 'management' %} !bg-primary_dark text-white{% endif %}">
