--- a/src/theme/templates/base.html
+++ b/src/theme/templates/base.html
@@ -16,11 +16,11 @@
 	{% tailwind_css %}
 </head>
 
-<body class="bg-bg_white flex flex-col p-0 m-0 font-plus_jakarta_sans">
+<body class="bg-bg_white flex flex-col p-0 m-0 font-plus_jakarta_sans min-h-[100vh]">
 
 
 	<!-- Header or navbar can go here -->
-	<div class="flex flex-col justify-start w-full overflow-hidden">
+	<div class="flex flex-col justify-start w-full h-full overflow-hidden">
 		{% block content %}
 		{% endblock %}
 	</div>
