refactor: update URL names and test cases for account and security settings

--- a/src/templates/settings/settings_navbar.html
+++ b/src/templates/settings/settings_navbar.html
@@ -5,7 +5,7 @@
             <ul>
                 <li class="mb-6">
                     <!-- EStos section de los IF se los mando desde el include de security_settings por ejemplo -->
-                    <a href="/settings/account_settings" class="
+                    <a href="/settings/account" class="
                     {% if section == 'account'%} 
                     text-primary_black
                     {% else %} 
@@ -23,7 +23,7 @@
                     text-lg font-medium">{%translate "Ajustes de Notificaciones" %}</a>
                 </li>
                 <li class="mb-6">
-                    <a href="/settings/security_settings" class="
+                    <a href="/settings/security" class="
                     {% if section == 'security'%} 
                     text-primary_black
                     {% else %} 
