refactor: add notification settings route and template with navigation integration

--- a/src/templates/settings/settings_navigation_tabs.html
+++ b/src/templates/settings/settings_navigation_tabs.html
@@ -13,7 +13,7 @@
             </a>
         </li>
         <li>
-            <a href="/settings/notification_settings" class="
+            <a href="/settings/notification" class="
                 text-lg font-medium transition-colors duration-200
                 {% if section == 'notification' %}
                     text-primary_black border-l-4 border-primary_black pl-3
@@ -35,7 +35,7 @@
             </a>
         </li>
         <li>
-            <a href="/settings/chat_settings" class="
+            <a href="/settings/chat" class="
                 text-lg font-medium transition-colors duration-200
                 {% if section == 'chat' %}
                     text-primary_black border-l-4 border-primary_black pl-3
