feat: forgot password

--- a/src/templates/login/login.html
+++ b/src/templates/login/login.html
@@ -51,7 +51,7 @@
         </a>
 
         <!-- Enlace para recuperar contraseña -->
-        <a href="#" class="text-primary_black hover:underline mb-4 block font-bold">
+        <a href="{% url 'password_reset' %}" class="text-primary_black hover:underline mb-4 block font-bold">
             {% translate "¿Olvidaste tu contraseña?" %}
         </a>
 
