--- a/src/templates/navigation/top_bar_controls.html
+++ b/src/templates/navigation/top_bar_controls.html
@@ -35,9 +35,11 @@
         <a href="/profile/notifications"
            class="relative p-2 border border-primary_lightest bg-white rounded-full hover:bg-primary_lightest hover:border-primary_medium transition duration-200 ease-in-out">
             {% include "icon/bell.html" with w="24" h="24" %}
+            {% if request.profile.unread_notifications > 0 %}
             <span id="notification-counter" class="absolute top-0 right-0 bg-red-500 text-white rounded-full text-xs px-1 py-0.5 transform translate-x-1/2 -translate-y-1/2 shadow-md">
-                0
+                {{ request.profile.unread_notifications }}
             </span>
+            {% endif %}
         </a>
 
         <!-- Configuración -->
