--- a/src/templates/homepage/footer.html
+++ b/src/templates/homepage/footer.html
@@ -37,7 +37,7 @@
 
         <!-- Aclaración de Autoría -->
         <div class="text-center w-full">
-            <p>{% translate "Aplicación desarrollada por:" %} <strong>Rony Ordoñez, David Artunduaga, Juan de la Pava, Juan Parra, Pablo Guzmán y Daniel González
+            <p>{% translate "Aplicación desarrollada por:" %} <strong>David Artunduaga, Juan de la Pava, Daniel González, Pablo Guzmán, Juan Parra y Rony Ordoñez
             </strong></p>
         </div>
 </footer>
