--- a/src/templates/profile/notifications.html
+++ b/src/templates/profile/notifications.html
@@ -7,15 +7,16 @@
     <h1 class="text-primary_black text-3xl font-bold text-center mb-4">{% translate "Notificaciones" %}</h1>
 
     <!-- Sección de Lista de Notificaciones -->
-    <div class="bg-primary_lightest/25 p-6 rounded-lg shadow min-h-[60vh]">
+    <div class="bg-primary_lightest/25 p-6 rounded-lg shadow min-h-[70vh]">
         <div class="flex flex-col gap-6">
             {% if notifications %}
-                <ul class="flex flex-col-reverse gap-4">
+                <!-- Contenedor con scroll interno -->
+                <ul class="flex flex-col-reverse gap-4 max-h-screen overflow-y-auto pr-2">
                     {% for notification in notifications %}
                     <li class="flex items-start bg-white rounded-lg p-4 shadow">
                         <div class="flex-shrink-0 mr-4">
                             {% if notification.notification_type == 'PG' %}
-                                <div class="bg-green-100-100 text-green-600 p-2 rounded-full">💵</div>
+                                <div class="bg-green-100 text-green-600 p-2 rounded-full">💵</div>
                             {% elif notification.notification_type == 'PY' %}
                                 <div class="bg-primary_medium/25 text-primary_medium p-2 rounded-full">📁</div>
                             {% elif notification.notification_type == 'MJ' %}
@@ -43,7 +44,7 @@
                     {% endfor %}
                 </ul>
             {% else %}
-                    <p class="text-primary_black text-lg m-auto">{% translate "No tienes notificaciones." %}</p>
+                <p class="text-primary_black text-lg m-auto">{% translate "No tienes notificaciones." %}</p>
             {% endif %}
         </div>
     </div>
