--- a/src/templates/login/password_reset_complete.html
+++ b/src/templates/login/password_reset_complete.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="flex flex-col justify-center items-center h-screen p-4 md:p-0">
+{% load socialaccount static i18n %}
+
+<div class="login-bg flex flex-col justify-center items-center h-screen p-4 md:p-0">
     <!-- Mensaje de confirmación de contraseña -->
     <div class="rounded-lg shadow-md text-center w-full max-w-md p-6 md:p-10 bg-white">
         
@@ -19,5 +21,14 @@
         </a>
     </div>
 </div>
+
+<!-- Imagen de fondo -->
+<style>
+    .login-bg {
+        background-image: url("{% static 'img/hero-bg.svg' %}");
+        background-size: cover;
+        background-position: center;
+    }
+</style>
 
 {% endblock %}
