--- a/src/templates/login/password_reset_form.html
+++ b/src/templates/login/password_reset_form.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %}
 {% load socialaccount static i18n %}
 {% load custom_filters %}
+{% load socialaccount static i18n %}
+
 
 
 {% block content %}
-<div class="flex flex-col justify-center items-center h-screen p-4 md:p-0">
+<div class="login-bg flex flex-col justify-center items-center h-screen p-4 md:p-0">
     <!-- Contenedor principal -->
     <div class="rounded-lg shadow-md text-center w-full max-w-md p-6 md:p-10 bg-white">
         
@@ -27,4 +29,13 @@
         </form>
     </div>
 </div>
+
+<!-- Imagen de fondo -->
+<style>
+    .login-bg {
+        background-image: url("{% static 'img/hero-bg.svg' %}");
+        background-size: cover;
+        background-position: center;
+    }
+</style>
 {% endblock %}
